--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,15 @@
     --player2-color-zone: #557c47;
     --player2-color-background: #add773;
     --player2-color-outline: #628146;
+
+    --popup-background-color-transparent: rgba(0, 0, 0, 0.5);
+    --notification-background-color-transparent: rgba(255, 255, 255, 0.8);
+
+    --cancel-color-background: #d55049;
+    --cancel-color-outline: #802f2e;
+
+    --confirm-color-background: #add773;
+    --confirm-color-outline: #628146;
 }
 
 * {
@@ -27,7 +36,7 @@ body {
     background-color: black;
 }
 
-svg {
+svg#play_area {
     height: 100vh;
     width: auto;
 }
@@ -67,9 +76,9 @@ ellipse {
     bottom: 0px;
     left: 50%;
     transform: translateX(-50%);
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: var(--popup-background-color-transparent);
     width: 36vw;
-    height: 20vh;
+    height: 24vh;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -104,6 +113,15 @@ ellipse {
     stroke: var(--player1-color-outline);
 }
 
+.text-display.enemy {
+    border-color: var(--player2-color-outline);
+    background-color: var(--player2-color-background);
+}
+
+.text-display.enemy text {
+    stroke: var(--player2-color-outline);
+}
+
 .no-backdrop {
     background-color: transparent;
     border: none;
@@ -121,11 +139,6 @@ ellipse {
     gap: 2vh;
 }
 
-#turn-text-wrapper {
-    width: 16vw;
-    height: 6vh;
-}
-
 #phase-wrapper {
     display: flex;
     flex-direction: row;
@@ -141,7 +154,203 @@ ellipse {
 
 .phase-square {
     width: 6vw;
-    height: 1vh;
+    height: 2vh;
     background: #fff;
-    border-radius: 0.5vh;
+    border-radius: 1vh;
+    border: solid 3px black;
+}
+
+.phase-square.activeSelf {
+    background-color: var(--player1-color-background);
+    border-color: var(--player1-color-outline);
+}
+
+.phase-square.activeEnemy {
+    background-color: var(--player2-color-background);
+    border-color: var(--player2-color-outline);
+}
+
+#next-phase-button {
+    width: 12vw;
+    height: 6vh;
+}
+
+#popup-troops-selector {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 24vw;
+    height: 8vh;
+    border-radius: 4vh;
+    background-color: var(--popup-background-color-transparent);
+    /* border: solid 5px #000; */
+    position: absolute;
+    left: 50%;
+    top: 75%;
+    transform: translate(-50%, -50%);
+}
+
+.troop-button {
+    width: 8vh;
+    height: 8vh;
+    border-radius: 4vh;
+    border: solid 3px black;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.troop-button:hover {
+    filter:brightness(1.1);
+}
+
+.troop-button:active {
+    filter:brightness(0.9);
+}
+
+.troop-button.small {
+    width: 4vh;
+    height: 4vh;
+    border-radius: 2vh;
+    border-width: 2px;
+}
+
+.troop-button.self {
+    background-color: var(--player1-color-background);
+    border-color: var(--player1-color-outline);
+}
+
+.troop-button.self text {
+    stroke: var(--player1-color-outline);
+}
+
+.troop-button.enemy {
+    background-color: var(--player2-color-background);
+    border-color: var(--player2-color-outline);
+}
+
+.troop-button.enemy text {
+    stroke: var(--player2-color-outline);
+}
+
+#troops-cancel-button {
+    background-color: var(--cancel-color-background);
+    border-color: var(--cancel-color-outline);
+}
+
+#troops-confirm-button {
+    background-color: var(--confirm-color-background);
+    border-color: var(--confirm-color-outline);
+}
+
+#troops-decrease-button {
+    background-color: var(--cancel-color-background);
+    border-color: var(--cancel-color-outline);
+}
+
+#troops-increase-button {
+    background-color: var(--confirm-color-background);
+    border-color: var(--confirm-color-outline);
+}
+
+.troops-button .material-symbols-outlined {
+    font-variation-settings: 'FILL' 0, 'wght' 800, 'GRAD' 200, 'opsz' 48;
+    /* color: white; */
+}
+
+#troops-text-wrapper {
+    height: 8vh;
+    width: 8vh;
+}
+
+#notification {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: var(--notification-background-color-transparent);
+    width: 24vw;
+    height: 4vh;
+    border-bottom-left-radius: 2vh;
+    border-bottom-right-radius: 2vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#battle-screen {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    backdrop-filter: blur(3px);
+    background-color: var(--popup-background-color-transparent);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+
+}
+
+#self-troops-wrapper {
+    position: absolute;
+    left: 10%;
+    top: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#enemy-troops-wrapper {
+    position: absolute;
+    right: 10%;
+    top: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#battle-buttons-wrapper {
+    position: absolute;
+    bottom: 20%;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--notification-background-color-transparent);
+    width: 24vw;
+    height: 16vh;
+    border-radius: 8vh;
+}
+
+#battle-input-wrapper {
+ 
+}
+
+#close-battle-button {
+    position: absolute;
+    top: 4vh;
+    right: 4vh;
+}
+
+#self-troops-title-wrapper {
+    width: 20vw;
+}
+
+#self-troops-text-wrapper {
+    width: 5vw;
+}
+
+#enemy-troops-title-wrapper {
+    width: 20vw;
+}
+
+#enemy-troops-text-wrapper {
+    width: 5vw;
 }
