--- a/public/style.css
+++ b/public/style.css
@@ -314,6 +314,30 @@ ellipse {
     align-items: center;
 }
 
+#self-dice-wrapper {
+    position: absolute;
+    left: 40%;
+    top: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+}
+
+#enemy-dice-wrapper {
+    position: absolute;
+    right: 40%;
+    top: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+}
+
+.dice {
+    color: white;
+}
+
 #battle-buttons-wrapper {
     position: absolute;
     bottom: 20%;
@@ -327,10 +351,6 @@ ellipse {
     width: 24vw;
     height: 16vh;
     border-radius: 8vh;
-}
-
-#battle-input-wrapper {
- 
 }
 
 #close-battle-button {
