--- a/public/style.css
+++ b/public/style.css
@@ -104,25 +104,25 @@ ellipse {
     left: 50%;
     transform: translateX(-50%);
     background-color: var(--popup-background-color-transparent);
-    width: 36vw;
-    height: 24vh;
+    width: 640px;
+    height: 240px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding-left: 4vw;
-    padding-right: 4vw;
+    padding-left: 64px;
+    padding-right: 64px;
 
-    border-top-right-radius: 2vh;
-    border-top-left-radius: 2vh;
+    border-top-right-radius: 64px;
+    border-top-left-radius: 64px;
 }
 
 .text-display {
-    width: 8vh;
-    height: 8vh;
-    border-radius: 4vh;
+    width: 64px;
+    height: 64px;
+    border-radius: 32px;
     border: solid 3px var(--player1-color-outline);
-    font-size: 4vh;
+    font-size: 32px;
     background-color: var(--player1-color-background);
     display: flex;
     align-items: center;
@@ -131,7 +131,7 @@ ellipse {
 
 .text-display svg {
     width: 100%;
-    height: inherit;
+    height: 100%;
 }
 
 .text-display text {
@@ -163,7 +163,7 @@ ellipse {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 2vh;
+    gap: 16px;
 }
 
 #phase-wrapper {
@@ -171,19 +171,19 @@ ellipse {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 1vw;
+    gap: 16px;
 }
 
 #phase-text-wrapper {
-    width: 16vw;
-    height: 6vh;
+    width: 360px;
+    height: 64px;
 }
 
 .phase-square {
-    width: 6vw;
-    height: 2vh;
+    width: 96px;
+    height: 16px;
     background: #fff;
-    border-radius: 1vh;
+    border-radius: 8px;
     border: solid 3px black;
 }
 
@@ -198,8 +198,8 @@ ellipse {
 }
 
 #next-phase-button {
-    width: 12vw;
-    height: 6vh;
+    width: 240px;
+    height: 64px;
 }
 
 #popup-troops-selector {
@@ -207,9 +207,9 @@ ellipse {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 24vw;
-    height: 8vh;
-    border-radius: 4vh;
+    width: 480px;
+    height: 96px;
+    border-radius: 48px;
     background-color: var(--popup-background-color-transparent);
     /* border: solid 5px #000; */
     position: absolute;
@@ -219,9 +219,9 @@ ellipse {
 }
 
 .troop-button {
-    width: 8vh;
-    height: 8vh;
-    border-radius: 4vh;
+    width: 96px;
+    height: 96px;
+    border-radius: 48px;
     border: solid 3px black;
     cursor: pointer;
     display: flex;
@@ -239,9 +239,9 @@ ellipse {
 }
 
 .troop-button.small {
-    width: 4vh;
-    height: 4vh;
-    border-radius: 2vh;
+    width: 48px;
+    height: 48px;
+    border-radius: 24px;
     border-width: 2px;
 }
 
@@ -289,8 +289,8 @@ ellipse {
 }
 
 #troops-text-wrapper {
-    height: 8vh;
-    width: 8vh;
+    height: 96px;
+    width: 96px;
 }
 
 #notification {
@@ -299,10 +299,10 @@ ellipse {
     left: 50%;
     transform: translateX(-50%);
     background-color: var(--notification-background-color-transparent);
-    width: 24vw;
-    height: 4vh;
-    border-bottom-left-radius: 2vh;
-    border-bottom-right-radius: 2vh;
+    width: 480px;
+    height: 48px;
+    border-bottom-left-radius: 24px;
+    border-bottom-right-radius: 24px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -343,10 +343,16 @@ ellipse {
 
 #self-dice-wrapper {
     left: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #enemy-dice-wrapper {
     right: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .dice-wrapper {
@@ -386,9 +392,9 @@ ellipse {
     align-items: center;
     justify-content: center;
     background-color: var(--notification-background-color-transparent);
-    width: 24vw;
-    height: 16vh;
-    border-radius: 8vh;
+    width: 360px;
+    height: 180px;
+    border-radius: 90px;
 }
 
 #close-battle-button {
@@ -402,7 +408,7 @@ ellipse {
 }
 
 #self-troops-text-wrapper {
-    width: 5vw;
+    /* width: 5vw; */
 }
 
 #enemy-troops-title-wrapper {
@@ -410,7 +416,7 @@ ellipse {
 }
 
 #enemy-troops-text-wrapper {
-    width: 5vw;
+    /* width: 5vw; */
 }
 
 #quit-button {
