--- a/public/style.css
+++ b/public/style.css
@@ -10,11 +10,19 @@
     --popup-background-color-transparent: rgba(0, 0, 0, 0.5);
     --notification-background-color-transparent: rgba(255, 255, 255, 0.8);
 
+    --cancel-color-text: #802f2e;
     --cancel-color-background: #d55049;
     --cancel-color-outline: #802f2e;
 
+    --confirm-color-text: #628146;
     --confirm-color-background: #add773;
     --confirm-color-outline: #628146;
+
+    --disabled-color-text: #444444;
+    --disabled-color-background: #999999;
+    --disabled-color-outline: #444444;
+
+    --error-color-text: #802f2e;
 
     --material-icons-color: black;
     --field-color: gray;
@@ -42,12 +50,15 @@
     --button-color: white;
     --button-background: #f2855d;
     --button-background-hover: #f8b58b;
+    --button-outline: black;
 }
 
 * {
     font-family: "Cairo", sans-serif;
-    color: #000;
+    color: inherit;
     box-sizing: border-box;
+    font-weight: 800;
+    user-select: none;
 }
 
 body {
@@ -96,6 +107,85 @@ g#areas, g#text-backgrounds, g#texts {
 ellipse {
     stroke-width: 3px;
     stroke: #000;
+}
+
+button {
+    font-weight: bold;
+    height: 48px;
+    border: 3px solid var(--button-outline);
+    border-radius: 8px;
+    color: var(--button-color);
+    background: var(--button-background);
+    box-shadow: 0px 3px 3px rgb(0, 0, 0, 0.4);
+    padding: 0 32px;
+    transition: 0.3s all;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+button:hover {
+    background: var(--button-background-hover);
+}
+button:active {
+    margin: 2px -2px -2px 2px;
+    box-shadow: 0px 0px;
+}
+button.confirm {
+    color: var(--confirm-color-text);
+    border-color: var(--confirm-color-outline);
+    background-color: var(--confirm-color-background);
+}
+button.confirm:hover {
+    background: var(--confirm-color-background);
+    filter: brightness(1.1);
+}
+button.cancel {
+    color: var(--cancel-color-text);
+    border-color: var(--cancel-color-outline);
+    background-color: var(--cancel-color-background);
+}
+button.cancel:hover {
+    background: var(--cancel-color-background);
+    filter: brightness(1.1);
+}
+button:disabled {
+    pointer-events: none;
+    cursor: default;
+    color: var(--disabled-color-text);
+    border-color: var(--disabled-color-outline);
+    background-color: var(--disabled-color-background);
+}
+button:disabled text {
+    stroke: var(--disabled-color-text);
+}
+
+button.icon-button {
+    width: 64px;
+    height: 64px;
+    border-radius: 32px;
+    padding: 0;
+}
+
+button.troop-button {
+    width: 96px;
+    height: 96px;
+    border-radius: 48px;
+}
+
+button.small {
+    width: 48px;
+    height: 48px;
+    border-radius: 24px;
+    border-width: 2px;
+}
+
+.error {
+    color: var(--error-color-text);
+}
+
+.hidden {
+    visibility: hidden;
 }
 
 #info-panel {
@@ -181,6 +271,11 @@ ellipse {
     height: 64px;
 }
 
+#next-phase-button svg {
+    height: 100%;
+    width: auto;
+}
+
 #popup-troops-selector {
     display: flex;
     flex-direction: row;
@@ -195,63 +290,6 @@ ellipse {
     left: 50%;
     top: 75%;
     transform: translate(-50%, -50%);
-}
-
-.troop-button {
-    width: 96px;
-    height: 96px;
-    border-radius: 48px;
-    border: solid 3px black;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.troop-button:hover {
-    filter:brightness(1.1);
-}
-
-.troop-button:active {
-    filter:brightness(0.9);
-}
-
-.troop-button:disabled {
-    pointer-events: none;
-    cursor: default;
-    background-color: #999999;
-    border-color: #444444;
-}
-
-.troop-button:disabled text {
-    stroke: #444444;
-}
-
-.troop-button.small {
-    width: 48px;
-    height: 48px;
-    border-radius: 24px;
-    border-width: 2px;
-}
-
-#troops-cancel-button {
-    background-color: var(--cancel-color-background);
-    border-color: var(--cancel-color-outline);
-}
-
-#troops-confirm-button {
-    background-color: var(--confirm-color-background);
-    border-color: var(--confirm-color-outline);
-}
-
-#troops-decrease-button {
-    background-color: var(--cancel-color-background);
-    border-color: var(--cancel-color-outline);
-}
-
-#troops-increase-button {
-    background-color: var(--confirm-color-background);
-    border-color: var(--confirm-color-outline);
 }
 
 .troops-button .material-symbols-outlined {
@@ -392,8 +430,8 @@ ellipse {
 
 #quit-button {
     position: absolute;
-    right: 20vh;
-    top: 5vh;
+    right: 4vh;
+    top: 4vh;
 }
 
 .player-0 {
@@ -412,6 +450,82 @@ ellipse {
 
 .player-1 text {
     stroke: var(--player1-color-outline);
+}
+
+#cards-overlay {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#cards-window {
+    width: calc(64px * 2 + 32px * 4 + 128px * 5);
+    min-height: calc(64px + 192px + 64px + 48px + 64px);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    padding: 64px;
+    gap: 64px;
+}
+
+#cards-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 32px;
+}
+
+.card {
+    width: 128px;
+    height: 192px;
+    background-color: white;
+    border-radius: 8px;
+    padding: 16px;
+    border: solid 5px black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    cursor: pointer;
+    transition: 0.2s all;
+}
+
+.card path {
+    transition: 0.2s all;
+}
+
+.card.selected {
+    border-color: var(--confirm-color-outline);
+    color: var(--confirm-color-text);
+    transform: scale(1.1);
+}
+
+.card.selected path {
+    fill: var(--confirm-color-outline);
+}
+
+#close-cards-overlay-button {
+    position: absolute;
+    top: 4vh;
+    right: 4vh;
+}
+
+#open-cards-button {
+    position: absolute;
+    bottom: 4vh;
+    left: 4vh;
+    height: 96px;
+    width: 96px;
+    padding: 8px;
+}
+
+#open-cards-button svg {
+    /* height: 100%;
+    width: 100%; */
 }
 
 /*       */
@@ -473,24 +587,7 @@ input, select {
 input::placeholder, select {
     color: gray;
 }
-button {
-    font-weight: bold;
-    height: 40px;
-    border: 1px solid black;
-    color: var(--button-color);
-    background: var(--button-background);
-    box-shadow: 2px 2px 2px rgb(0, 0, 0, 0.4);
-    padding: 0 20px;
-    transition: 1s background;
-    cursor: pointer;
-}
-button:hover {
-    background: var(--button-background-hover);
-}
-button:active {
-    margin: 2px -2px -2px 2px;
-    box-shadow: 0px 0px;
-}
+
 button.icon {
     height: inherit;
     border: none;
