--- a/public/style.css
+++ b/public/style.css
@@ -10,7 +10,8 @@
     --player1-background-gradient: linear-gradient(0, #76934e 0%, #dbfd92 100%);
 
     --overlay-background: rgba(0, 0, 0, 0.5);
-    --notification-background: rgba(255, 255, 255, 0.8);
+    --hint-background: rgba(255, 255, 255, 0.7);
+    --emphasis-background: rgba(255, 255, 255, 0.1);
 
     --cancel-color-text: #391513;
     --cancel-color-background: linear-gradient(0, #8e3531 0%, #dd544d 100%);
@@ -242,6 +243,22 @@ button.small {
     stroke-width: 5px;
 }
 
+.text-display.big {
+    width: 256px;
+    height: 256px;
+    border-radius: 128px;
+    border-width: 10px;
+    font-size: 128px;
+}
+
+.text-display.medium {
+    width: 128px;
+    height: 128px;
+    border-radius: 64px;
+    border-width: 7px;
+    font-size: 64px;
+}
+
 .no-backdrop {
     background: transparent;
     border: none;
@@ -249,6 +266,119 @@ button.small {
 
 .no-backdrop text {
     stroke: #000;
+}
+
+#notification-overlay > div {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+.notification-title {
+    width: 768px;
+    height: 128px;
+}
+.notification-title text {
+    font-size: 56px;
+    letter-spacing: 2px;
+    stroke-width: 7px;
+}
+
+.notification-subtitle {
+    width: 768px;
+    height: 128px;
+}
+.notification-subtitle text {
+    font-size: 24px;
+}
+#introduction-notification {
+    justify-content: space-around;
+}
+#introduction-player-name {
+    background: var(--emphasis-background);
+    border-radius: 32px;
+}
+#introduction-description-container {
+    font-size: 28px;
+    color: white;
+}
+#introduction-color-icon {
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+    line-height: 32px;
+    border-radius: 16px;
+    border: solid 3px black;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+#phase-notification-background {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 768px;
+    height: 128px;
+    border-radius: 1024px;
+    filter: blur(64px);
+}
+#phase-notification-wrapper {
+    z-index: 1;
+}
+#troops-notification-top-hint {
+    position: absolute;
+    top: 0;
+    background: white;
+    width: 512px;
+    height: 48px;
+    border-bottom-left-radius: 24px;
+    border-bottom-right-radius: 24px;
+    padding: 0;
+}
+#troops-notification-top-hint text {
+    font-size: 48px;
+    stroke-width: 8px;
+    letter-spacing: 2px;
+}
+#troops-notification-window {
+    width: 640px;
+    height: 384px;
+    border-radius: 48px;
+    background-color: var(--overlay-background);
+    padding: 0;
+    gap: 0;
+}
+#troops-notification-window-header {
+    height: 64px;
+    width: 100%;
+    border-top-left-radius: 48px;
+    border-top-right-radius: 48px;
+}
+#troops-notification-window-header text {
+    font-size: 48px;
+    stroke-width: 8px;
+    letter-spacing: 2px;
+}
+#troops-notification-window-content {
+    width: 100%;
+    flex: auto;
+    justify-content: space-evenly;
+}
+#troops-notification-troops-description {
+    color: white;
+    font-size: 16px;
+}
+#card-notification {
+    justify-content: space-around;
+}
+
+.svg-text {
+    width: 100%;
+    height: 100%;
 }
 
 #turn-wrapper {
@@ -316,12 +446,12 @@ button.small {
     width: 96px;
 }
 
-#notification {
+#hint {
     position: absolute;
     top: 0;
     left: 50%;
     transform: translateX(-50%);
-    background: var(--notification-background);
+    background: var(--hint-background);
     width: 480px;
     height: 48px;
     border-bottom-left-radius: 24px;
@@ -422,7 +552,7 @@ button.small {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: var(--notification-background);
+    background: var(--hint-background);
     width: 360px;
     height: 180px;
     border-radius: 90px;
@@ -457,7 +587,7 @@ button.small {
 }
 
 .player-0 {
-    border-color: var(--player0-color-outline);
+    border-color: var(--player0-color-outline); 
     background: var(--player0-background-gradient);
 }
 
