--- a/public/style.css
+++ b/public/style.css
@@ -376,6 +376,28 @@ button.small {
     justify-content: space-around;
 }
 
+#game-title {
+    position: absolute;
+    top: 0;
+    height: 256px;
+}
+
+#title-overlay-content {
+    width: 384px;
+    height: 256px;
+}
+
+#instructions-content {
+    width: 1024px;
+    height: 768px;
+    padding: 32px;
+}
+
+#instructions-text {
+    width: 100%;
+    flex: 1;
+}
+
 .svg-text {
     width: 100%;
     height: 100%;
